syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message WeatherRequest {
  string location = 1;
  int32 days = 2;
}

message WeatherResponse {
  repeated WeatherForecast forecasts = 1;
}

message WeatherForecast {
  string date = 1;
  int32 temperatureC = 2;
  string summary = 3;
}